# ansible-sign

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .yamllint  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  bindep.txt  class_index.html  function_index.html  index.html  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  status.json  tox.ini  z_0f7a0620dddb7237___init___py.html  z_0f7a0620dddb7237_base_py.html  z_0f7a0620dddb7237_distlib_manifest_py.html  z_4483f565be4bc6ed___init___py.html  z_4483f565be4bc6ed_cli_py.html  z_9dc633aec8ed261a___init___py.html  z_9dc633aec8ed261a_base_py.html  z_a3fda3eac9be077a___init___py.html  z_a3fda3eac9be077a_base_py.html  z_bd17804ca1d80b75___init___py.html  z_bd17804ca1d80b75_signer_py.html  z_bd17804ca1d80b75_verifier_py.html
.config/: requirements-docs.in  requirements.in
.github/workflows/: ci.yml  docs.yml  release.yml  sonar-scan.yml  tox.yml
docs/: community.rst  conf.py  contributing.rst  index.rst  requirements.txt  rundown.rst
src/ansible_sign/: __init__.py  cli.py  version.py
src/ansible_sign/checksum/: __init__.py  base.py
src/ansible_sign/checksum/differ/: __init__.py  base.py  distlib_manifest.py
src/ansible_sign/signing/: __init__.py  base.py
src/ansible_sign/signing/gpg/: __init__.py  signer.py  verifier.py
src/ansible_sign/signing/sigstore/: __init__.py  signer.py  verifier.py
src/ansible_signatory/: __init__.py  cli.py  skeleton.py
src/ansible_signatory/checksum/: base.py
src/ansible_signatory/checksum/differ/: __init__.py  base.py  directory.py  distlib_manifest.py  git.py
src/ansible_signatory/signing/: __init__.py  base.py  gpg.py
src/ansible_signatory/signing/gpg/: signer.py  verifier.py
tests/: conftest.py  requirements.txt  test_checksum.py  test_cli.py  test_cli_pinentry.py  test_gpg.py  test_skeleton.py
tests/fixtures/checksum/directory-files-added/: hello2  hello3
tests/fixtures/checksum/directory-files-changed/: hello1
tests/fixtures/checksum/invalid-checksum-1/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/invalid-checksum-2/: MANIFEST.in
tests/fixtures/checksum/invalid-checksum-2/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/manifest-files-added/: sha256sum.txt
tests/fixtures/checksum/manifest-files-added-not-in-manifest/: MANIFEST.in  evil.yaml
tests/fixtures/checksum/manifest-files-added-not-in-manifest/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/manifest-files-added/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/manifest-files-removed/: MANIFEST.in
tests/fixtures/checksum/manifest-success/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/manifest-syntax-error/: MANIFEST.in
tests/fixtures/checksum/manifest-with-blank-lines-and-comments/: MANIFEST.in  hello1
tests/fixtures/checksum/manifest-with-blank-lines-and-comments/.ansible-sign/: sha256sum.txt
tests/fixtures/checksum/manifest-with-blank-lines-and-comments/dir/: hello2
tests/fixtures/gpg/hao-signed/: MANIFEST.in  hello_world.yml  sha256sum.txt
tests/fixtures/gpg/hao-signed-invalid/: hello_world.yml
tests/fixtures/gpg/hao-signed-invalid/.ansible-sign/: sha256sum.txt  sha256sum.txt.sig
tests/fixtures/gpg/hao-signed-missing-manifest/: hello_world.yml
tests/fixtures/gpg/hao-signed-missing-manifest/.ansible-sign/: sha256sum.txt
tests/fixtures/gpg/hao-signed/.ansible-sign/: sha256sum.txt.sig
tests/fixtures/gpgkeys/: hao_pubkey.txt
tests/fixtures/sigstore/signed-invalid-sig/.ansible-sign/: sha256sum.txt.sigstore
tests/fixtures/sigstore/signed-missing-materials/: hello_world.yml
tests/fixtures/sigstore/signed-missing-materials/.ansible-sign/: sha256sum.txt.sigstore
tests/fixtures/sigstore/signed-valid/.ansible-sign/: sha256sum.txt  sha256sum.txt.sigstore
